# DinoTracks

./: .gitignore  CMakeLists.txt  README.md
data/maps/: 1.map
include/: Application.hpp  EntityBuilder.cpp  EntityBuilder.hpp  Map.hpp  MapLoader.hpp  ResourceManager.hpp  SoundManager.hpp  Tags.hpp
include/Thor/: Config.hpp
include/components/: Attributes.hpp  Component.hpp  ComponentData.hpp  Components.hpp  ComponentsBase.hpp  Energy.hpp  Food.hpp  Health.hpp  Position.hpp  Score.hpp  Velocity.hpp  Visual.hpp
include/logic/: Component.hpp  DinosaurType.hpp  EnergySystem.hpp  Entity.hpp  EntityBuilder.hpp  EntityManager.hpp  HealthSystem.hpp  Logic.hpp  Map.hpp  MovementSystem.hpp  System.hpp
include/views/: AIView.hpp  EndMenu.hpp  HumanView.hpp  InputManager.hpp  Menu.hpp  StartMenu.hpp  UserInterface.hpp
resources/dinosaurs/: Stegosaurus.txt  Tyrannosaurus.txt  allosaurus.txt  pachycephalosaurus.txt  parasaurolophus.txt  protoceratops.txt  spinosaurus.txt  stegosaurus.txt  tyrannosaurus.txt  velociraptor.txt
resources/keys/: KeyConfig.txt
resources/maps/: 1.map  2.map
src/: Application.cpp  Application.hpp  Map.cpp  MapLoader.cpp  ResourceManager.cpp  SoundManager.cpp  main.cpp
src/components/: Attributes.cpp  Component.cpp  ComponentData.cpp  Components.cpp  ComponentsBase.cpp  Energy.cpp  Food.cpp  Health.cpp  Position.cpp  Score.cpp  Velocity.cpp  Visual.cpp
src/logic/: Component.cpp  DinosaurType.cpp  EnergySystem.cpp  Entity.cpp  EntityBuilder.cpp  HealthSystem.cpp  Logic.cpp  Map.cpp  MovementSystem.cpp
src/views/: AIView.cpp  EndMenu.cpp  HumanView.cpp  InputManager.cpp  Menu.cpp  StartMenu.cpp  UserInterface.cpp
